--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,9 @@
 form.login {
   margin-top: 50px;
 } */
+.fontwhite{
+  color:white;
+}
 
 .button1{
   border-radius: 30px;
@@ -10,15 +13,24 @@ form.login {
               inset -14px -14px 28px #8bc9f7;
 
   color: whitesmoke;
-
-
 }
 
 .button2{
-  border-radius: 30px;
+ border-radius: 30px;
 background: #e16e51;
 box-shadow:  9px 9px 18px #ad553e, 
              -9px -9px 18px #ff8764;
+}
+
+.navbar1{
+   background-color:black ;
+   
+}
+
+.navbar1:hover{
+  background-color: rgb(47, 47, 51);
+  color: #2e2e31;
+  border-radius: 10px;
 }
 
 
@@ -43,16 +55,107 @@ box-shadow:  9px 9px 18px #ad553e,
   height: 100%;
   width: 100% ;
   text-align: center;
+  
 
 }
-
-
-
 
 .card1{
   border-radius: 30px;
   background: #79afd7;
-  box-shadow:  14px 14px 28px #6795b7, 
+ /* box-shadow:  14px 14px 28px #6795b7, 
                -14px -14px 28px #8bc9f7;
+*/
+              }
 
+
+@keyframes tipsy {
+ 0 {
+ transform: translateX(-50%) translateY(-50%) rotate(0deg);
+  }
+100% {
+transform: translateX(-50%) translateY(-50%) rotate(360deg);
 }
+}
+                    
+.around {
+    color: #fffbf1;
+    text-shadow: 0 20px 25px #2e2e31, 0 40px 60px #2e2e31;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    letter-spacing: -3px;
+    margin: 0;
+    position: fixed;
+    top: 5%;
+    left: 75%;
+    transform: translateX(-50%) translateY(-50%);
+ }
+                    
+.around:before,
+.around:after {
+   content: '';
+   padding: .9em .4em;
+   position: absolute;
+   left: 50%;
+   width: 100%;
+   top: 50%;
+   display: block;
+   border: 5px solid rgb(25, 65, 196);
+   transform: translateX(-50%) translateY(-50%) rotate(0deg);
+   animation: 10s infinite alternate ease-in-out tipsy;
+  }
+                    
+  .around:before {
+   border-color: #4a54d9 #4a54d9 rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
+   z-index: -1;
+   }
+                    
+  .around:after {
+   border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #4a54d9 #4a54d9;
+   box-shadow: 25px 25px 25px rgba(46, 46, 49, .8);
+   }
+
+   .grid-container {
+    display: grid;
+    grid-gap: 10px;
+    /*background-color: #2196F3;*/
+    padding: 10px;
+  }
+  
+  .grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px;
+    font-size: 30px;
+  }
+  
+  .item1 {
+    grid-column: 1 / span 2;
+    grid-row: 1;
+  }
+  
+  .item2 {
+    grid-column: 2;
+    grid-row: 2 ;
+  }
+  .item3 {
+    grid-column: 1;
+    grid-row: 2 ;
+  }
+  .item5 {
+    grid-column: 1 / span 2;
+    grid-row: 3;
+  }
+  
+  .img1 {
+    width: 100%;
+    height: auto;
+  }
+  .pIngredient{
+    color: black;
+    font-size: medium;
+  }
+  .pInstructions{
+    font-size:small;
+    color: black;
+  }
