Adjusted style to account for errors, properly targeted card display so new searches don't constantly add cards

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -69,7 +69,7 @@ box-shadow:  9px 9px 18px #ad553e,
 
 
 @keyframes tipsy {
- 0 {
+ 0% {
  transform: translateX(-50%) translateY(-50%) rotate(0deg);
   }
 100% {
