--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -154,8 +154,10 @@ transform: translateX(-50%) translateY(-50%) rotate(360deg);
   .pIngredient{
     color: black;
     font-size: medium;
+    font-weight: bold;
   }
   .pInstructions{
     font-size:small;
     color: black;
+    font-weight: bold;
   }
